fix: Add subpath to Storybook on production

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,3 +27,5 @@ jobs:
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
 
+# Lembrar de modificar a permissão do repositorio
+# Settings > Actions > General > Workflow permissions > Read and write permissions
