--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,8 @@ jobs:
       - run: npm ci
       
       - run: npm run build
+        env:
+          TURBO_TOKEN: YHEWsU2gUww4PAemAbVJwifH
       
       - name: Deploy storybook
         working-directory: ./packages/docs
