--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,6 +22,7 @@ jobs:
       - run: npm run build
         env:
           TURBO_TOKEN: YHEWsU2gUww4PAemAbVJwifH
+          TURBO_TEAM: leorsc
       
       - name: Deploy storybook
         working-directory: ./packages/docs
